--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,20 @@
 {
   "parser": "vue-eslint-parser",
   "env": {
-    "browser": false,
+    "browser": true,
     "es2021": true
   },
   "parserOptions": {
     "ecmaVersion": 12,
-    "sourceType": "module"
+    "sourceType": "module",
+    "parser": "@typescript-eslint/parser"
   },
   "extends": [
+    "plugin:@typescript-eslint/recommended",
     "plugin:vue/vue3-recommended",
     "prettier"
   ],
   "plugins": [
     "vue"
-  ],
-  "rules": {
-  }
+  ]
 }
