--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/vue": "6.4.2",
     "@types/jest": "27.0.2",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/vue3-jest": "27.0.0-alpha.1",
